# budget_app

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
src/budget_app/: config.py  db.py  models.py
src/budget_app/ingest/: __init__.py  base.py  cli.py  seb.py
src/budget_app/services/: ingest_db.py
tests/db/: test_insert.py
tests/fixtures/seb/: test_seb.csv
tests/ingest/: test_seb.py
